--- a/npm/android-arm64/package.json
+++ b/npm/android-arm64/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@napi-rs/package-template-android-arm64",
+  "name": "whatlang-node-android-arm64",
   "version": "1.0.0",
   "os": [
     "android"
@@ -7,9 +7,9 @@
   "cpu": [
     "arm64"
   ],
-  "main": "package-template.android-arm64.node",
+  "main": "whatlang-node.android-arm64.node",
   "files": [
-    "package-template.android-arm64.node"
+    "whatlang-node.android-arm64.node"
   ],
   "description": "Template project for writing node package with napi-rs",
   "keywords": [
