--- a/npm/win32-x64-msvc/package.json
+++ b/npm/win32-x64-msvc/package.json
@@ -11,7 +11,7 @@
   "files": [
     "whatlang-node.win32-x64-msvc.node"
   ],
-  "description": "Template project for writing node package with napi-rs",
+  "description": "Rust whatlang binding",
   "keywords": [
     "napi-rs",
     "NAPI",
@@ -28,5 +28,5 @@
     "registry": "https://registry.npmjs.org/",
     "access": "public"
   },
-  "repository": "git@github.com:napi-rs/package-template.git"
+  "repository": "https://github.com/cijiugechu/whatlang-node"
 }
