--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "whatlang-node",
   "version": "1.0.0",
-  "description": "Template project for writing node package with napi-rs",
+  "description": "Rust whatlang binding",
   "main": "index.js",
-  "repository": "git@github.com:napi-rs/package-template.git",
+  "repository": "https://github.com/cijiugechu/whatlang-node",
   "license": "MIT",
   "keywords": [
     "napi-rs",
